API cleanup: Row.no() replaces Row.rowNumber()